--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.3"
   },
