@react-native-firebase/app, @react-native-firebase/perf, axios, lodash, react-native-paper, react-native-splash-screen, react-native-vector-icons npm's added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,8 @@
     "baseUrl": ".", //Base directory to resolve non-absolute module names.
     "paths": {
       "*": ["src/*"],
-      "@screens/*": ["src/screens/*"]
+      "@screens/*": ["src/screens/*"],
+      "@utils/*": ["src/Utils/*"]
     },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
