--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,12 +1,15 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+$FirebaseSDKVersion = '7.0.0'
+
 platform :ios, '10.0'
 
 target 'ReactNativeStarterKit' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
+
 
   target 'ReactNativeStarterKitTests' do
     inherit! :complete
