--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
   "dependencies": {
     "@react-native-firebase/app": "^10.2.0",
     "@react-native-firebase/perf": "^10.2.0",
+    "@react-native-masked-view/masked-view": "^0.2.4",
+    "@react-navigation/bottom-tabs": "^6.0.0-next.11",
+    "@react-navigation/drawer": "^6.0.0-next.10",
+    "@react-navigation/native": "^6.0.0-next.8",
+    "@react-navigation/stack": "^6.0.0-next.17",
     "axios": "^0.21.0",
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.5.0",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.2.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0"
   },
