--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,11 +16,13 @@ target 'ReactNativeStarterKit' do
     # Pods for testing
   end
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
+  use_flipper!({ 'Flipper-Folly' => '2.5.3', 'Flipper' => '0.87.0', 'Flipper-RSocket' => '1.3.1' })
   post_install do |installer|
     flipper_post_install(installer)
   end
