--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-splash-screen": "^3.2.0",
+    "@types/react-native-vector-icons": "^6.4.6",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
