--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,9 @@
     "paths": {
       "*": ["src/*"],
       "@screens/*": ["src/screens/*"],
-      "@utils/*": ["src/Utils/*"]
+      "@utils/*": ["src/Utils/*"],
+      "@component/*": ["src/component/*"],
+      "@static/*": ["src/static/*"]
     },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
