Useage of reduc think by calling PIA from action

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,8 @@
       "@screens/*": ["src/screens/*"],
       "@utils/*": ["src/Utils/*"],
       "@component/*": ["src/component/*"],
-      "@static/*": ["src/static/*"]
+      "@static/*": ["src/static/*"],
+      "@redux/*": ["src/redux/*"]
     },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
