--- a/.gitignore
+++ b/.gitignore
@@ -32,12 +32,14 @@ local.properties
 # Visual Studio Code
 #
 # .vscode/
+package-lock.json
 
 # node.js
 #
 node_modules/
 npm-debug.log
 yarn-error.log
+Pa
 
 # BUCK
 buck-out/
